--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 ENVIRONMENT=local
 ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+NANGO_SECRET_KEY=....
+NANGO_HOST=http://localhost:3003
