--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Deploy to GCP
         run: |
-          gcloud run deploy pf-mcp --source . --env-vars-file .envstage.yaml --region=us-central1 --project absolute-test-project --no-allow-unauthenticated
+          gcloud run deploy pf-mcp --source . --env-vars-file .envstage.yaml --region=us-central1 --no-allow-unauthenticated
