--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Add secrets to env
         run: |
-          echo "ANTHROPIC_API_KEY=${{ secrets.PROD_ANTHROPIC_API_KEY }}" >> .envprod.yaml
-          echo "NANGO_SECRET_KEY=${{ secrets.PROD_NANGO_SECRET_KEY }}" >> .envprod.yaml
+          echo "ANTHROPIC_API_KEY: ${{ secrets.PROD_ANTHROPIC_API_KEY }}" >> .envprod.yaml
+          echo "NANGO_SECRET_KEY: ${{ secrets.PROD_NANGO_SECRET_KEY }}" >> .envprod.yaml
 
       - name: GCP Auth
         uses: google-github-actions/auth@v2.1.2
