--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Add secrets to env
         run: |
-          echo "ANTHROPIC_API_KEY=${{ secrets.INT_ANTHROPIC_API_KEY }}" >> .envstage.yaml
-          echo "NANGO_SECRET_KEY=${{ secrets.INT_NANGO_SECRET_KEY }}" >> .envstage.yaml
+          echo "ANTHROPIC_API_KEY: ${{ secrets.INT_ANTHROPIC_API_KEY }}" >> .envstage.yaml
+          echo "NANGO_SECRET_KEY: ${{ secrets.INT_NANGO_SECRET_KEY }}" >> .envstage.yaml
 
       - name: GCP Auth
         uses: google-github-actions/auth@v2.1.2
