--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           echo "ANTHROPIC_API_KEY: ${{ secrets.INT_ANTHROPIC_API_KEY }}" >> .envstage.yaml
           echo "NANGO_SECRET_KEY: ${{ secrets.INT_NANGO_SECRET_KEY }}" >> .envstage.yaml
+          echo "PROJECT_ID: ${{ vars.INT_GCP_PROJECT_ID }}" >> .envstage.yaml
           cat .envstage.yaml
 
       - name: GCP Auth
