updated env var

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ ENVIRONMENT=local
 ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 NANGO_SECRET_KEY=....
-NANGO_HOST=http://localhost:3003
+NANGO_HOST=https://api.nango.dev
