--- a/src/servers/peakflo/config.yaml
+++ b/src/servers/peakflo/config.yaml
@@ -19,3 +19,15 @@ tools:
   - name: "read_vendor"
     description: "Fetch vendor details by external ID from Peakflo API"
     required_scopes: []
+  - name: "soa_email"
+    description: "Send an SOA email to the vendor"
+    required_scopes: []
+  - name: "raise_dispute"
+    description: "Raise a dispute"
+    required_scopes: []
+  - name: "create_task"
+    description: "Create a task"
+    required_scopes: []
+  - name: "add_action_log"
+    description: "Add an action log"
+    required_scopes: []
