Added tool for email categorization

--- a/src/servers/outlook/config.yaml
+++ b/src/servers/outlook/config.yaml
@@ -11,3 +11,5 @@ tools:
     description: "Move an email to a different folder like inbox, sentitems, drafts using Outlook"
   - name: "forward_email"
     description: "Forward an email using Outlook"
+  - name: "categorize_email"
+    description: "Categorize an email using Outlook"
