[TSK-14668] add profiler to find memory leak cause

--- a/requirements.txt
+++ b/requirements.txt
@@ -349,6 +349,7 @@ yarl==1.18.3
     # via aiohttp
 zeep==4.3.1
     # via simple-salesforce
+memory_profiler==0.60.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
