add gmail mcp text and attachment support

--- a/src/servers/gmail/config.yaml
+++ b/src/servers/gmail/config.yaml
@@ -4,8 +4,10 @@ description: "Interact with Gmail emails and messages"
 documentation_path: "README.md"
 tools:
   - name: "read_emails"
-    description: "Search and read emails in Gmail"
+    description: "Search and read emails in Gmail with full text body and attachment information"
   - name: "send_email"
-    description: "Send an email through Gmail"
+    description: "Send an email through Gmail with optional attachments"
+  - name: "forward_email"
+    description: "Forward an email to recipients, preserving original content and attachments"
   - name: "update_email"
     description: "Update email labels (mark as read/unread, move to folders)"
