added new tools

--- a/src/servers/github/config.yaml
+++ b/src/servers/github/config.yaml
@@ -47,3 +47,11 @@ tools:
     description: "Get a specific pull request for a repository"
   - name: "create_pull_request"
     description: "Create a new pull request for a repository"
+  - name: "get_pull_request_changes"
+    description: "Get code changes for a pull request (per-file additions/deletions and diffs)"
+  - name: "get_tree"
+    description: "Get Git tree for a ref (branch/tag/SHA); list all paths and types without file contents"
+  - name: "search_code"
+    description: "Search code (e.g. repo:owner/repo path:src); rate limit 10 req/min"
+  - name: "get_repository"
+    description: "Get repository metadata (default_branch, description, etc.)"
