--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Black
         run: |
           python -m pip install --upgrade pip
-          pip install black
+          pip install black==25.1.0
 
       - name: Check formatting with Black
         run: |
