handle binary data

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 NANGO_SECRET_KEY=....
 NANGO_HOST=https://api.nango.dev
+
+STORAGE_PROVIDER=local  # "local" for development, "gcs" for production
+LOCAL_STORAGE_DIR=/tmp/pfmcp-attachments  # local provider only
+GCS_BUCKET_NAME=your-bucket-name  # gcs provider only
