--- a/src/servers/gmail/config.yaml
+++ b/src/servers/gmail/config.yaml
@@ -11,4 +11,6 @@ tools:
     description: "Forward an email to recipients, preserving original content and attachments"
   - name: "update_email"
     description: "Update email labels (mark as read/unread, move to folders)"
+  - name: "get_attachment"
+    description: "Get a temporary download URL for an email attachment"
 
